--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>主要存储我的网页项目</h1>
-    <a href="https://javazhou.github.io/">JavaZhou的主页</a>
-    <a href="https://javazhou.github.io/wanso/">JavaZhou的万搜网</a>
+    <a href="https://jackzho.github.io/">JavaZhou的主页</a>
+    <a href="https://jackzho.github.io/wanso/">JavaZhou的万搜网</a>
 </body>
 </html>
