--- a/wanso/index.html
+++ b/wanso/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>万搜网-搜索引擎大全</title>
     <link href="./js/bootstrap.min.css" rel="stylesheet" >
-
+    <!-- 设置标签图片为 favicon.ico -->
+    <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon"></link>
     <style>
         .myinputform{
             background: 0 0;
