--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>主要存储我的网页项目</h1>
     <a href="https://jackzho.github.io/">JavaZhou的主页</a>
     <a href="https://jackzho.github.io/wanso/">JavaZhou的万搜网</a>
+    <a href="https://jackzho.github.io/teachDay/">教师节快乐</a>
 </body>
 </html>
